--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,12 +32,28 @@ spring:
     base-package: com.xy
     enabled: true
 #设置监控配置帐号密码
-  security:
-    user:
-      name: admin
-      password: 123456
-      roles: SUPERUSER
-
+#  security:
+#    user:
+#      name: admin
+#      password: 123456
+#      roles: SUPERUSER
+# 禁用 thymeleaf 缓存
+  thymeleaf:
+    cache: false
+# 是否支持批量上传   (默认值 true)
+  servlet:
+    multipart:
+      enabled: true
+# 上传文件的临时目录 （一般情况下不用特意修改）
+      location:
+# 上传文件最大为 1M （默认值 1M 根据自身业务自行控制即可）
+      max-file-size: 1048576
+# 上传请求最大为 10M（默认值10M 根据自身业务自行控制即可）
+      max-request-size: 1048576
+# 文件大小阈值，当大于这个阈值时将写入到磁盘，否则存在内存中，（默认值0 一般情况下不用特意修改）
+      file-size-threshold: 0
+# 判断是否要延迟解析文件（相当于懒加载，一般情况下不用特意修改）
+      resolve-lazily: false
 
 mybatis:
   mapper-locations: classpath:com/xy/studyboot/mapper/*.xml
@@ -53,15 +69,6 @@ pagehelper:
   params: count=countSql
 
 
-
-
-
-
-logging:
-  level:
-    root: WARN
-    org.springframework.web: DEBUG
-    org.hibernate: ERROR
 
 
 
