增加jdk1.8 时间工具类，无两个时间对比,后续增加

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,13 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
+		<!-- jdk1.8时间类型对应数据库datetime mybatis数据库字段类型映射，此处是重点 -->
+		<!--<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-typehandlers-jsr310</artifactId>
+			<version>1.0.1</version>
+		</dependency>-->
+
 	</dependencies>
 
 	<build>
