--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,17 @@
 			<artifactId>mybatis-typehandlers-jsr310</artifactId>
 			<version>1.0.1</version>
 		</dependency>-->
+		<!--谷歌提供生成二维码-->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 
 	</dependencies>
 
